--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
           </div>
           <div class="Garage space">
             <div class="padded-inner-container">
-              <strong>3 Car</strong>
-              <small>Parking</small>
+              <strong>2 Car</strong>
+              <small>1 Attached 1 Designated</small>
             </div>
         </div>
         <div class="Commission Compensation">
