--- a/index.html
+++ b/index.html
@@ -83,11 +83,11 @@
               <small>1 Attached 1 Designated</small>
             </div>
         </div>
-        <div class="Commission Compensation">
+        <!-- <div class="Commission Compensation">
           <div class="padded-inner-container">
             <strong style="color: blue;">3%</strong>
             <small  style="color: blue;">Buyer's Broker Compensation</small>
-          </div>
+          </div> -->
       </div>
       </div>
       </div>
